Fix minor layout bug: Add horizontal padding to sidebar.

--- a/_sass/_section.scss
+++ b/_sass/_section.scss
@@ -24,6 +24,7 @@
 
 .section__sidebar {
   display: block;
+  padding: 0 $spacing-unit;
 
   @include media-query($screen-md) {
     width: 40%;
